# PSArc-rs

./: Cargo.toml  Makefile.toml  README.md
crates/cli/: Cargo.toml  LICENSE
crates/cli/src/: main.rs
crates/lib/: Cargo.toml  README.md
crates/lib/res/: test.pak
crates/lib/src/: lib.rs  prelude.rs
crates/lib/src/archive/: archive_file.rs  archive_flags.rs  archive_table.rs  compression_type.rs  mod.rs  table_of_content.rs  version.rs
crates/lib/src/traits/: as_bytes.rs  mod.rs  parse.rs  parse_context.rs
crates/main/: Cargo.toml
crates/wasi/: Cargo.toml
