[package]
name = "PSArc-cli"
version = "0.0.0"
edition = "2021"
description = "The CLI for PSArc-rs (A library to handle writing/parsing/unpacking/packing of Playstation Archive formats)"
authors = ["Jacob Allen Morris"]
readme = "https://github.com/Jacobboogiebear/PSArc-rs/blob/master/README.md"
repository = "https://github.com/Jacobboogiebear/PSArc-rs/"
license = "MIT"
license-file = "https://github.com/Jacobboogiebear/PSArc-rs/blob/master/LICENSE"
keywords = ["ps", "playstation", "arc", "archive", "psarc"]

[dependencies]
