[package]
name = "psarc-cli"
version = "0.0.0"
edition = "2024"
description = "The CLI for PSArc-rs (A library to handle writing/parsing/unpacking/packing of Playstation Archive formats)"
authors = ["Jacob Allen Morris"]
readme = "README.md"
repository = "https://github.com/Jacobboogiebear/PSArc-rs/"
license-file = "LICENSE"
keywords = ["ps", "playstation", "arc", "archive", "psarc"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
psarc-lib = { workspace = true }
