[package]
name = "PSArc-lib"
version = "0.0.0"
edition = "2021"
description = "A library to handle writing/parsing/unpacking/packing of Playstation Archive formats"
authors = ["Jacob Allen Morris"]
readme = "README.md"
repository = "https://github.com/Jacobboogiebear/PSArc-rs/"
license = "MIT"
license-file = "LICENSE"
keywords = ["ps", "playstation", "arc", "archive", "psarc"]

[dependencies]
