[package]
name = "PSArc-lib"
version = "0.0.1"
edition = "2021"
description = "A library to handle writing/parsing/unpacking/packing of Playstation Archive formats"
authors = ["Jacob Allen Morris"]
readme = "README.md"
repository = "https://github.com/Jacobboogiebear/PSArc-rs/"
license-file = "LICENSE"
keywords = ["ps", "playstation", "arc", "archive", "psarc"]
exclude = ["res/test.pak"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { optional = true, version = "1.0.195", features = ["derive"] }
seq-macro = { version = "0.3.5" }
anyhow = "1.0.79"
flate2 = { version = "1.0.28", features = ["rust_backend"] }

[features]
serde = ["dep:serde"]
wasi = []