[package]
name = "PSArc-wasi"
version = "0.1.0"
edition = "2021"
description = "A wasi wrapper around PSArc-lib (A library to handle writing/parsing/unpacking/packing of Playstation Archive formats)"
authors = ["Jacob Allen Morris"]
readme = "README.md"
repository = "https://github.com/Jacobboogiebear/PSArc-rs/"
license-file = "LICENSE"
keywords = ["ps", "playstation", "arc", "archive", "psarc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
